@@ -4,6 +4,7 @@ import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponent;
 
 public class ChemicalReactionsSimSharing {
     public static enum UserComponents implements IUserComponent {
-            devToggleDebugOverlay
-        }
+        devToggleDebugOverlay,
+        atomLabelsRotate
+    }
 }
