@@ -1,3 +1,4 @@
+Added developer option to allow atom labels rotate with the molecules
 Removed brownian motion randomness, added in initial velocity
 # 0.00.04 (65350) Jun 21, 2012
 # 0.00.03 (64262) May 18, 2012
